# bioinformatics-tools

./: Dna2Bit.c  box-muller.c  bp.c  extract_gene.c  fmotif_gpu.cu  fmotif_mt.c  fmotif_mtmp.c  fmotif_phi.c  formatDNA.foot  formatDNA.head  formatDNA.makefile  formatDNA.pgc  forward.c  gibbs.c  gibbs.java  moving_average.c  neuron.c  neuron.h  repet_cat.sh  shuffle.c  viterbi_log.c
DnaRecognizer/: MT.h  MT_mic.h  bp_lib.c  bp_lib.h  bp_lib_mic.h  dna_recognizer.c  dnn_lib.c  dnn_lib.h  dnn_lib_mic.h  get_allcsv.sh  get_graph.R  neuron.c  neuron.h  neuron_mic.h  rootjob.sh  sum_delta.c
lcs_gui/: .anjuta_sym_db.db  AUTHORS  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h  config.status  configure  configure.ac  libtool  log.txt
lcs_gui/.anjuta/: associations  default.profile
lcs_gui/.anjuta/CVS/: Entries  Repository
lcs_gui/CVS/: Entries  Repository
lcs_gui/Debug/: Makefile  config.h  config.status  libtool
lcs_gui/Optimized/: Makefile  config.status  lcs-0.1.tar.gz.20110114  lcs-0.1.tar.gz.20110415  libtool
lcs_gui/Optimized/lcs-0.9/: COPYING  INSTALL  Makefile  Makefile.am  Makefile.in  README  config.status  configure  configure.ac  libtool
lcs_gui/Optimized/lcs-0.9/man/: Makefile  Makefile.am
lcs_gui/Optimized/lcs-0.9/manual/lcs/C/: lcs.xml
lcs_gui/Optimized/lcs-0.9/po/: Makefile  Makefile.in
lcs_gui/Optimized/lcs-0.9/src/: Makefile  Makefile.am  callbacks.h  lcs  lcs.c  lcs.c.bak20140408  lcs.h  lcs_gui.ui  main.c
lcs_gui/Optimized/lcs-0.9/src/.deps/: callbacks.Po  hmm.Po  hmm_procedure.Po  lcs.Po  main.Po
lcs_gui/Optimized/lcs_gui-0.1/src/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  lcs.c  lcs.h  lcs_gui.ui  main.c
lcs_gui/Optimized/lcs_gui-0.1/src/CVS/: Entries  Repository
lcs_gui/Profiling/: Makefile  config.h  config.status  libtool
lcs_gui/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
lcs_gui/man/: Makefile  Makefile.in  lcs.1
lcs_gui/po/: Makefile  Makefile.in
lcs_gui/src/: .goutputstream-H39FLV  .goutputstream-KAG0KV  .goutputstream-KXAQTV  Makefile  Makefile.in  callbacks.c  callbacks.h  hmm.c  hmm.h  hmm_procedure.c  lcs.c  lcs.h  lcs_gui.ui  main.c
sql/: count_predict_table.sql  create_index.sql  create_table_GeneMarkHMM26M.sql  create_table_discovered_gene.sql  create_view_predictgene.sql  create_view_predictgene_with_nc.sql  load_predict_data.sql
(+90 files in other folders)
